samples/_failures_safe/1761562678_b0a770_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3c44e057.c: In function ‘main’:
./samples/SAFE/__tmp_3c44e057.c:156:50: error: expected ‘]’ at end of input
  156 |         printf("%s: %d\n", words[i].word, words[i
      |                                                  ^
      |                                                  ]
./samples/SAFE/__tmp_3c44e057.c:156:9: error: expected declaration or statement at end of input
  156 |         printf("%s: %d\n", words[i].word, words[i
      |         ^~~~~~
./samples/SAFE/__tmp_3c44e057.c:156:9: error: expected declaration or statement at end of input
